beginnings of a GUI